@@ -10,7 +10,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkTextMark.c,v 1.12 2004/09/10 12:13:42 vincentdarley Exp $
+ * RCS: @(#) $Id: tkTextMark.c,v 1.13 2004/10/05 01:26:10 hobbs Exp $
  */
 
 #include "tkInt.h"
@@ -265,7 +265,7 @@ TkTextSetMark(textPtr, name, indexPtr)
     CONST char *name;		/* Name of mark to set. */
     TkTextIndex *indexPtr;	/* Where to set mark. */
 {
-    Tcl_HashEntry *hPtr;
+    Tcl_HashEntry *hPtr = NULL;
     TkTextSegment *markPtr;
     TkTextIndex insertIndex;
     int new;
